fixed bug on mobile devices

--- a/style/qSlider.css
+++ b/style/qSlider.css
@@ -49,7 +49,6 @@
 }
 
 .slider-pagination{
-    z-index: 2;
     position: absolute;
     left:0;
     bottom:0;
